--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <h2>Video</h2>
                     <!-- Video source: videos file. -->
                     <video controls width="640">
-                        <source src="coffee.mp4" type="video/mp4">
+                        <source src="butterfly.mp4" type="video/mp4">
                         <track  srclang="en" src="media/captions.vtt" label="Coffee" captions="coffee">
                         Your browser does not support the video element.
                     </video>
